--- a/public/themes/mobile/default/public/assets/css/mobile.css
+++ b/public/themes/mobile/default/public/assets/css/mobile.css
@@ -242,6 +242,11 @@ body#relay {
 	background-color: #ff5d5d;
 	border-color: #ff5d5d;
 }
+.mui-btn-disabled {
+	background-color: #999999;
+	border-color: #999999;
+	color: #fff;
+}
 
 #card-list .bottom-arrow {
 	position: absolute;
@@ -599,6 +604,12 @@ body#relay {
 	border-color: #ff5d5d;
 }
 
+#detail .header .operate a.mui-btn-disabled {
+    background-color: #999999;
+    border-color: #999999;
+    color: #fff;
+}
+
 #detail .mui-card .mui-card-content .header p {
 	font-size: 14px;
 	margin-bottom: 0;
@@ -672,6 +683,7 @@ body#relay {
 	width: 100%;
 	border-radius: 4px;
 	background-color: #ff5d5d;
+	border-color: #ff5d5d;
 }
 
 #detail .modal-title {
